# vrx

usv_gazebo_plugins/: CMakeLists.txt  package.xml
usv_gazebo_plugins/include/usv_gazebo_plugins/: usv_gazebo_thrust_plugin.hh  usv_gazebo_wind_plugin.hh
usv_gazebo_plugins/src/: usv_gazebo_dynamics_plugin.cc  usv_gazebo_thrust_plugin.cc  usv_gazebo_wind_plugin.cc
vrx_gazebo/: CMakeLists.txt  package.xml
vrx_gazebo/include/vrx_gazebo/: light_buoy_plugin.hh  placard_plugin.hh  scoring_plugin.hh
vrx_gazebo/src/: light_buoy_plugin.cc  placard_plugin.cc  scoring_plugin.cc
vrx_msgs/: CMakeLists.txt  package.xml
vrx_msgs/msg/: Contact.msg  Task.msg
wamv_description/: CMakeLists.txt
wamv_gazebo/: CMakeLists.txt  package.xml
wave_gazebo/: CMakeLists.txt  package.xml
wave_gazebo_plugins/: CMakeLists.txt  package.xml
